# pm-team-with-autogen

./: .gitignore  GITHUB_INSTRUCTIONS.md  README.md  TODO.md  audit_log.jsonl  implementation.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
autogen_pm_team/: MIGRATION.md  README.md  __init__.py  requirements.txt
autogen_pm_team/examples/: run_demo.py
autogen_pm_team/outputs/20250907_112426_global_billing_consolidation_--blocker_pci_audit_pending_--a/: blockers.txt  manifest.json  metrics.json  plan.json  release.json  stakeholder_summary.txt
autogen_pm_team/outputs/20250907_112426_global_billing_consolidation_--blocker_pci_audit_pending_--a/autogen/: planner_raw.txt  release_raw.txt  stakeholder_raw.txt
autogen_pm_team/pm_team/: __init__.py  autogen_integration.py  base.py  config.py  orchestration.py  output_writer.py  release_coordinator.py  sprint_planner.py  stakeholder_communicator.py
autogen_pm_team/tests/: test_orchestration.py
examples/: run_demo.py
frontend/pm-team-ui/: README.md  angular.json  package-lock.json  package.json
frontend/pm-team-ui/src/: index.html
frontend/pm-team-ui/src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts  env.token.ts
src/pm_team/: __init__.py  api.py  autogen_agent.py  autogen_integration.py  base.py  cli.py  config.py  conversation.py  orchestration.py  output_writer.py  plan_diff.py  plan_ops.py  projects.py  release_coordinator.py  sprint_planner.py  stakeholder_communicator.py
tests/: test_additional.py  test_orchestration.py  test_projects.py
(+3 files in other folders)
