[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-pm-team"
version = "0.1.0"
description = "Lightweight simulated Autogen project management agent team"
authors = [{name = "Example", email = "example@example.com"}]
readme = "autogen_pm_team/README.md"
requires-python = ">=3.10"
dependencies = [
    # Add real autogen deps here when needed
]

[tool.pytest.ini_options]
pythonpath = ["."]